--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -11,9 +11,8 @@ layout:
 tabs:
   # format: <filename_without_extension>: <value>
   home: Home
-  categories: Docs
+  categories: Categories
   tags: Tags
-  bookshelf: Bookshelf
   archives: Archives
   about: About
 
@@ -44,7 +43,7 @@ copyright:
 meta: Using the :THEME theme for :PLATFORM.
 
 not_found:
-  statment: Sorry, we've misplaced that URL or it's pointing to something that doesn't exist.
+  statement: Sorry, we've misplaced that URL or it's pointing to something that doesn't exist.
 
 notification:
   update_found: A new version of content is available.
