--- a/_posts/2025-02-02-hackers.md
+++ b/_posts/2025-02-02-hackers.md
@@ -3,7 +3,8 @@ title: "How Hackers Gain Access to Devices & How to Defend Yourself"
 date: 2025-02-02
 categories: [Cybersecurity, Awareness]
 tags: [hacking, phishing, malware, security, forensics]
-author: rasp-pereira
+image:
+    path: /assets/img/thumbnails/hackers.png
 ---
 
 ## 1. Social Engineering (Advanced Phishing)
