--- a/_posts/2025-02-02-hackers.md
+++ b/_posts/2025-02-02-hackers.md
@@ -2,7 +2,7 @@
 title: "The Most Critical Cyber Attacks of Today: Overview, Simulation, Defense, and Verification"
 date: 2025-02-02
 categories: [Cybersecurity, Awareness]
-tags: [hacking, forensics]
+tags: [forensics]
 image:
     path: /assets/img/thumbnails/hackers.png
 ---
